--- a/Emparejados/src/Vista/ResultadoPartida.fxml
+++ b/Emparejados/src/Vista/ResultadoPartida.fxml
@@ -7,13 +7,8 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" opacity="0.7" prefHeight="627.0" prefWidth="895.0" style="-fx-background-color: ffffff;" styleClass="fondoMenu" stylesheets="@../application/estiloAzul.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControladorResultadoPartida">
+<Pane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" opacity="0.7" prefHeight="627.0" prefWidth="895.0" style="-fx-background-color: ffffff;" styleClass="fondoMenu" stylesheets="@../application/estiloAzul.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControladorResultadoPartida">
    <children>
-      <ImageView fx:id="resultado" fitHeight="296.0" fitWidth="550.0" layoutX="173.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../imagenes/resultado_victoria.png" />
-         </image>
-      </ImageView>
       <Label fx:id="puntuacionFinal" layoutX="245.0" layoutY="369.0" prefHeight="47.0" prefWidth="472.0" text="Puntuación Final: ">
          <font>
             <Font size="20.0" />
@@ -30,5 +25,15 @@
          <font>
             <Font name="System Bold" size="20.0" />
          </font></Button>
+      <ImageView fx:id="resultado" fitHeight="296.0" fitWidth="550.0" layoutX="173.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../imagenes/resultado_victoria.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="confetiVictoria" fitHeight="563.0" fitWidth="828.0" layoutX="34.0" layoutY="34.0" pickOnBounds="true">
+         <image>
+            <Image url="@../imagenes/confetti.gif" />
+         </image>
+      </ImageView>
    </children>
 </Pane>
