--- a/Emparejados/src/application/estiloAzul.css
+++ b/Emparejados/src/application/estiloAzul.css
@@ -31,7 +31,6 @@
 	-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 20, 0, 0, 0);
 }
 
-
 .choice-box {
     -fx-pref-width: 220;
     -fx-background-color: white;
@@ -80,6 +79,7 @@
 	-fx-background-color: white;
 	-fx-background-radius: 30;
 	-fx-text-fill: #4b6aff;
+	-fx-font-size: 25;
 }
 
 .fondoTablero{
