--- a/Emparejados/src/Vista/EditorBarajaDorso.fxml
+++ b/Emparejados/src/Vista/EditorBarajaDorso.fxml
@@ -2,33 +2,38 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: ffffff;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.EditorBarajaDorsoController">
+<Pane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="650.0" style="-fx-background-color: ffffff;" styleClass="fondoMenu" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControladorEditorBarajaDorso">
    <children>
-      <Label alignment="CENTER" contentDisplay="TOP" layoutX="1.0" layoutY="8.0" prefHeight="55.0" prefWidth="600.0" text="TWINS">
+      <Label alignment="CENTER" contentDisplay="TOP" layoutX="106.0" layoutY="32.0" prefHeight="48.0" prefWidth="405.0" text="TWINS">
          <font>
             <Font size="41.0" />
          </font>
       </Label>
-      <Label alignment="CENTER" layoutX="1.0" layoutY="61.0" prefHeight="39.0" prefWidth="600.0" text="EDITOR DE BARAJA">
+      <Label alignment="CENTER" layoutX="121.0" layoutY="80.0" prefHeight="40.0" prefWidth="375.0" text="EDITOR DE BARAJA">
          <font>
             <Font size="28.0" />
          </font>
       </Label>
-      <Label layoutX="25.0" layoutY="119.0" prefHeight="25.0" prefWidth="174.0" text="Selecciona  un dorso:">
+      <Label layoutX="44.0" layoutY="141.0" prefHeight="25.0" prefWidth="174.0" text="Selecciona  un dorso:">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
       </Label>
-      <Button fx:id="buscar" layoutX="486.0" layoutY="112.0" mnemonicParsing="false" onMouseClicked="#buscarImagen" prefHeight="40.0" prefWidth="85.0" text="Buscar">
+      <Button fx:id="buscar" layoutX="498.0" layoutY="133.0" mnemonicParsing="false" onMouseClicked="#buscarImagen" prefHeight="40.0" prefWidth="85.0" text="Buscar">
          <font>
             <Font name="System Bold" size="16.0" />
          </font></Button>
-      <ImageView fx:id="imagenCarta" fitHeight="161.0" fitWidth="218.0" layoutX="210.0" layoutY="152.0" pickOnBounds="true" preserveRatio="true" />
-      <Button fx:id="siguienteButton" layoutX="417.0" layoutY="334.0" mnemonicParsing="false" onMouseClicked="#elegirParejas" text="Elegir Parejas">
+      <ImageView fx:id="imagenCarta" fitHeight="143.0" fitWidth="201.0" layoutX="201.0" layoutY="183.0" pickOnBounds="true" preserveRatio="true" />
+      <Button fx:id="siguienteButton" layoutX="431.0" layoutY="334.0" mnemonicParsing="false" onMouseClicked="#elegirParejas" text="Elegir Parejas">
          <font>
             <Font name="System Bold" size="20.0" />
          </font></Button>
@@ -36,9 +41,233 @@
          <font>
             <Font name="System Bold" size="20.0" />
          </font></Button>
-      <Label fx:id="pathImagen" layoutX="210.0" layoutY="124.0" prefHeight="17.0" prefWidth="234.0">
+      <Label fx:id="pathImagen" layoutX="240.0" layoutY="143.0" prefHeight="20.0" prefWidth="218.0">
          <font>
             <Font name="System Bold" size="14.0" />
          </font></Label>
+      <GridPane alignment="CENTER_RIGHT" layoutX="53.0" layoutY="427.0" prefHeight="65.0" prefWidth="546.0">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <ImageView fx:id="Pareja1Image" fitHeight="63.0" fitWidth="77.0" onMouseClicked="#editarPareja1" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
+            <ImageView fx:id="Pareja2Image" fitHeight="69.0" fitWidth="78.0" onMouseClicked="#editarPareja2" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" />
+            <ImageView fx:id="Pareja3Image" fitHeight="69.0" fitWidth="77.0" onMouseClicked="#editarPareja3" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" />
+            <ImageView fx:id="Pareja4Image" fitHeight="69.0" fitWidth="78.0" onMouseClicked="#editarPareja4" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" />
+            <ImageView fx:id="dorsoImage" fitHeight="68.0" fitWidth="79.0" onMouseClicked="#editarDorso" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="Pareja5Image" fitHeight="69.0" fitWidth="78.0" onMouseClicked="#editarPareja5" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" />
+            <ImageView fx:id="Pareja6Image" fitHeight="69.0" fitWidth="80.0" onMouseClicked="#editarPareja6" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" />
+         </children>
+      </GridPane>
+      <GridPane layoutX="35.0" layoutY="407.0" prefHeight="20.0" prefWidth="566.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+            <Label fx:id="dorsoLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="20.0" prefWidth="83.0" text="Dorso">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="Pareja1Label" alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="87.0" text="Pareja 1" textAlignment="CENTER" GridPane.columnIndex="1">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="Pareja2Label" alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="85.0" text="Pareja 2" textAlignment="CENTER" GridPane.columnIndex="2">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="Pareja3Label" alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="86.0" text="Pareja 3" textAlignment="CENTER" GridPane.columnIndex="3">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="Pareja4Label" alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="85.0" text="Pareja 4" textAlignment="CENTER" GridPane.columnIndex="4">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="Pareja5Label" alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="87.0" text="Pareja 5" textAlignment="CENTER" GridPane.columnIndex="5">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="Pareja6Label" alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="86.0" text="Pareja 6" textAlignment="CENTER" GridPane.columnIndex="6">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+         </children>
+      </GridPane>
+      <GridPane layoutX="35.0" layoutY="492.0" prefHeight="20.0" prefWidth="566.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+            <Label fx:id="Pareja7Label" alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="86.0" text="Pareja 7" textAlignment="CENTER" GridPane.columnIndex="1">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="Pareja8Label" alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="87.0" text="Pareja 8" textAlignment="CENTER" GridPane.columnIndex="2">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="Pareja9Label" alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="85.0" text="Pareja 9" textAlignment="CENTER" GridPane.columnIndex="3">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="Pareja10Label" alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="87.0" text="Pareja 10" textAlignment="CENTER" GridPane.columnIndex="4">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="Pareja11Label" alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="84.0" text="Pareja 11" textAlignment="CENTER" GridPane.columnIndex="5">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="Pareja12label" alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="86.0" text="Pareja 12" textAlignment="CENTER" GridPane.columnIndex="6">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+         </children>
+      </GridPane>
+      <GridPane layoutX="33.0" layoutY="512.0" prefHeight="65.0" prefWidth="566.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+            <ImageView fx:id="Pareja7Image" fitHeight="69.0" fitWidth="81.0" onMouseClicked="#editarPareja7" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
+            <ImageView fx:id="Pareja12Image" fitHeight="69.0" fitWidth="80.0" onMouseClicked="#editarPareja12" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" />
+            <ImageView fx:id="Pareja10Image" fitHeight="69.0" fitWidth="80.0" onMouseClicked="#editarPareja10" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" />
+            <ImageView fx:id="Pareja9Image" fitHeight="69.0" fitWidth="80.0" onMouseClicked="#editarPareja9" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" />
+            <ImageView fx:id="Pareja8Image" fitHeight="69.0" fitWidth="81.0" onMouseClicked="#editarPareja8" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" />
+            <ImageView fx:id="Pareja11Image" fitHeight="69.0" fitWidth="82.0" onMouseClicked="#editarPareja11" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" />
+         </children>
+      </GridPane>
+      <GridPane layoutX="33.0" layoutY="577.0" prefHeight="20.0" prefWidth="566.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+            <Label fx:id="Pareja13Label" alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="88.0" text="Pareja 13" textAlignment="CENTER" GridPane.columnIndex="1">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="Pareja14Label" alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="87.0" text="Pareja 14" textAlignment="CENTER" GridPane.columnIndex="2">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="Pareja15Label" alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="86.0" text="Pareja 15" textAlignment="CENTER" GridPane.columnIndex="3">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="Pareja16Label" alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="86.0" text="Pareja 16" textAlignment="CENTER" GridPane.columnIndex="4">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="Pareja17Label" alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="86.0" text="Pareja 17" textAlignment="CENTER" GridPane.columnIndex="5">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="Pareja18Label" alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="89.0" text="Pareja 18" textAlignment="CENTER" GridPane.columnIndex="6">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+         </children>
+      </GridPane>
+      <GridPane layoutX="33.0" layoutY="607.0" prefHeight="65.0" prefWidth="566.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+            <ImageView fx:id="Pareja13Image" fitHeight="69.0" fitWidth="81.0" onMouseClicked="#editarPareja13" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
+            <ImageView fx:id="Pareja14Image" fitHeight="69.0" fitWidth="80.0" onMouseClicked="#editarPareja14" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" />
+            <ImageView fx:id="Pareja15Image" fitHeight="69.0" fitWidth="80.0" onMouseClicked="#editarPareja15" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" />
+            <ImageView fx:id="Pareja16Image" fitHeight="69.0" fitWidth="80.0" onMouseClicked="#editarPareja16" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" />
+            <ImageView fx:id="Pareja17Image" fitHeight="69.0" fitWidth="81.0" onMouseClicked="#editarPareja17" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" />
+            <ImageView fx:id="Pareja18Image" fitHeight="69.0" fitWidth="80.0" onMouseClicked="#editarPareja18" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" />
+         </children>
+      </GridPane>
+      <Button fx:id="addImageButton" layoutX="431.0" layoutY="214.0" mnemonicParsing="false" onMouseClicked="#anyadirImagen" prefHeight="40.0" prefWidth="154.0" text="Añadir Imagen">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font>
+      </Button>
+      <StackPane fx:id="circuloSonido" layoutX="498.0" layoutY="37.0" prefHeight="86.0" prefWidth="101.0" styleClass="fondoBoton">
+         <children>
+            <ImageView fx:id="iconoSonido" fitHeight="54.0" fitWidth="58.0" onMouseClicked="#sonidoHandler" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../imagenes/sonido_on.png" />
+               </image>
+            </ImageView>
+         </children>
+      </StackPane>
    </children>
 </Pane>
