--- a/Emparejados/src/Vista/EditorBarajaDorso.fxml
+++ b/Emparejados/src/Vista/EditorBarajaDorso.fxml
@@ -13,16 +13,6 @@
 
 <Pane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="650.0" style="-fx-background-color: ffffff;" styleClass="fondoMenu" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControladorEditorBarajaDorso">
    <children>
-      <Label alignment="CENTER" contentDisplay="TOP" layoutX="106.0" layoutY="32.0" prefHeight="48.0" prefWidth="405.0" text="TWINS">
-         <font>
-            <Font size="41.0" />
-         </font>
-      </Label>
-      <Label alignment="CENTER" layoutX="121.0" layoutY="80.0" prefHeight="40.0" prefWidth="375.0" text="EDITOR DE BARAJA">
-         <font>
-            <Font size="28.0" />
-         </font>
-      </Label>
       <Label layoutX="44.0" layoutY="141.0" prefHeight="25.0" prefWidth="174.0" text="Selecciona  un dorso:">
          <font>
             <Font name="System Bold" size="16.0" />
@@ -59,13 +49,13 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <ImageView fx:id="Pareja1Image" fitHeight="63.0" fitWidth="77.0" onMouseClicked="#editarPareja1" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
-            <ImageView fx:id="Pareja2Image" fitHeight="69.0" fitWidth="78.0" onMouseClicked="#editarPareja2" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" />
-            <ImageView fx:id="Pareja3Image" fitHeight="69.0" fitWidth="77.0" onMouseClicked="#editarPareja3" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" />
-            <ImageView fx:id="Pareja4Image" fitHeight="69.0" fitWidth="78.0" onMouseClicked="#editarPareja4" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" />
-            <ImageView fx:id="dorsoImage" fitHeight="68.0" fitWidth="79.0" onMouseClicked="#editarDorso" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="Pareja5Image" fitHeight="69.0" fitWidth="78.0" onMouseClicked="#editarPareja5" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" />
-            <ImageView fx:id="Pareja6Image" fitHeight="69.0" fitWidth="80.0" onMouseClicked="#editarPareja6" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" />
+            <ImageView fx:id="Pareja1Image" fitHeight="63.0" fitWidth="77.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
+            <ImageView fx:id="Pareja2Image" fitHeight="69.0" fitWidth="78.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" />
+            <ImageView fx:id="Pareja3Image" fitHeight="69.0" fitWidth="77.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" />
+            <ImageView fx:id="Pareja4Image" fitHeight="69.0" fitWidth="78.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" />
+            <ImageView fx:id="dorsoImage" fitHeight="68.0" fitWidth="79.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="Pareja5Image" fitHeight="69.0" fitWidth="78.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" />
+            <ImageView fx:id="Pareja6Image" fitHeight="69.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" />
          </children>
       </GridPane>
       <GridPane layoutX="35.0" layoutY="407.0" prefHeight="20.0" prefWidth="566.0">
@@ -179,12 +169,12 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <ImageView fx:id="Pareja7Image" fitHeight="69.0" fitWidth="81.0" onMouseClicked="#editarPareja7" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
-            <ImageView fx:id="Pareja12Image" fitHeight="69.0" fitWidth="80.0" onMouseClicked="#editarPareja12" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" />
-            <ImageView fx:id="Pareja10Image" fitHeight="69.0" fitWidth="80.0" onMouseClicked="#editarPareja10" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" />
-            <ImageView fx:id="Pareja9Image" fitHeight="69.0" fitWidth="80.0" onMouseClicked="#editarPareja9" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" />
-            <ImageView fx:id="Pareja8Image" fitHeight="69.0" fitWidth="81.0" onMouseClicked="#editarPareja8" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" />
-            <ImageView fx:id="Pareja11Image" fitHeight="69.0" fitWidth="82.0" onMouseClicked="#editarPareja11" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" />
+            <ImageView fx:id="Pareja7Image" fitHeight="69.0" fitWidth="81.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
+            <ImageView fx:id="Pareja12Image" fitHeight="69.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" />
+            <ImageView fx:id="Pareja10Image" fitHeight="69.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" />
+            <ImageView fx:id="Pareja9Image" fitHeight="69.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" />
+            <ImageView fx:id="Pareja8Image" fitHeight="69.0" fitWidth="81.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" />
+            <ImageView fx:id="Pareja11Image" fitHeight="69.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" />
          </children>
       </GridPane>
       <GridPane layoutX="33.0" layoutY="577.0" prefHeight="20.0" prefWidth="566.0">
@@ -247,12 +237,12 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <ImageView fx:id="Pareja13Image" fitHeight="69.0" fitWidth="81.0" onMouseClicked="#editarPareja13" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
-            <ImageView fx:id="Pareja14Image" fitHeight="69.0" fitWidth="80.0" onMouseClicked="#editarPareja14" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" />
-            <ImageView fx:id="Pareja15Image" fitHeight="69.0" fitWidth="80.0" onMouseClicked="#editarPareja15" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" />
-            <ImageView fx:id="Pareja16Image" fitHeight="69.0" fitWidth="80.0" onMouseClicked="#editarPareja16" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" />
-            <ImageView fx:id="Pareja17Image" fitHeight="69.0" fitWidth="81.0" onMouseClicked="#editarPareja17" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" />
-            <ImageView fx:id="Pareja18Image" fitHeight="69.0" fitWidth="80.0" onMouseClicked="#editarPareja18" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" />
+            <ImageView fx:id="Pareja13Image" fitHeight="69.0" fitWidth="81.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
+            <ImageView fx:id="Pareja14Image" fitHeight="69.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" />
+            <ImageView fx:id="Pareja15Image" fitHeight="69.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" />
+            <ImageView fx:id="Pareja16Image" fitHeight="69.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" />
+            <ImageView fx:id="Pareja17Image" fitHeight="69.0" fitWidth="81.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" />
+            <ImageView fx:id="Pareja18Image" fitHeight="69.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" />
          </children>
       </GridPane>
       <Button fx:id="addImageButton" layoutX="431.0" layoutY="214.0" mnemonicParsing="false" onMouseClicked="#anyadirImagen" prefHeight="40.0" prefWidth="154.0" text="Añadir Imagen">
@@ -269,5 +259,10 @@
             </ImageView>
          </children>
       </StackPane>
+      <ImageView fitHeight="31.0" fitWidth="477.0" layoutX="81.0" layoutY="65.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../imagenes/editor_baraja.png" />
+         </image>
+      </ImageView>
    </children>
 </Pane>
