--- a/Emparejados/src/Vista/EditorBarajaOpciones.fxml
+++ b/Emparejados/src/Vista/EditorBarajaOpciones.fxml
@@ -1,25 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="600.0" style="-fx-background-color: ffffff;" styleClass="fondoMenu" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControladorEditorBarajaDorso">
+<Pane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="600.0" style="-fx-background-color: ffffff;" styleClass="fondoMenu" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControladorEditorBarajaOpciones">
    <children>
-      <Label alignment="CENTER" contentDisplay="TOP" layoutX="103.0" layoutY="34.0" prefHeight="59.0" prefWidth="410.0" text="TWINS">
-         <font>
-            <Font size="41.0" />
-         </font>
-      </Label>
-      <Label alignment="CENTER" layoutX="121.0" layoutY="80.0" prefHeight="40.0" prefWidth="375.0" text="EDITOR DE BARAJA">
-         <font>
-            <Font size="28.0" />
-         </font>
-      </Label>
       <Button fx:id="cancelarButton" layoutX="255.0" layoutY="331.0" mnemonicParsing="false" onMouseClicked="#cancelar" text="Cancelar">
          <font>
             <Font name="System Bold" size="20.0" />
@@ -44,5 +33,10 @@
             <Font name="System Bold" size="20.0" />
          </font>
       </Button>
+      <ImageView fitHeight="58.0" fitWidth="480.0" layoutX="60.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../imagenes/editor_baraja.png" />
+         </image>
+      </ImageView>
    </children>
 </Pane>
