--- a/Emparejados/src/Vista/EditorBarajaParejas.fxml
+++ b/Emparejados/src/Vista/EditorBarajaParejas.fxml
@@ -14,16 +14,6 @@
 
 <Pane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="650.0" style="-fx-background-color: ffffff;" styleClass="fondoMenu" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControladorEditorBarajaParejas">
    <children>
-      <Label alignment="CENTER" contentDisplay="TOP" layoutX="61.0" layoutY="31.0" prefHeight="59.0" prefWidth="540.0" text="TWINS">
-         <font>
-            <Font size="41.0" />
-         </font>
-      </Label>
-      <Label alignment="CENTER" layoutX="61.0" layoutY="83.0" prefHeight="40.0" prefWidth="540.0" text="EDITOR DE BARAJA">
-         <font>
-            <Font size="28.0" />
-         </font>
-      </Label>
       <Label layoutX="45.0" layoutY="133.0" prefHeight="20.0" prefWidth="137.0" text="Selecciona la pareja">
          <font>
             <Font name="System Bold" size="14.0" />
@@ -142,13 +132,13 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <ImageView fx:id="Pareja1Image" fitHeight="63.0" fitWidth="77.0" onMouseClicked="#editarPareja1" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
-            <ImageView fx:id="Pareja2Image" fitHeight="69.0" fitWidth="76.0" onMouseClicked="#editarPareja2" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" />
-            <ImageView fx:id="Pareja3Image" fitHeight="69.0" fitWidth="76.0" onMouseClicked="#editarPareja3" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" />
-            <ImageView fx:id="Pareja4Image" fitHeight="69.0" fitWidth="76.0" onMouseClicked="#editarPareja4" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" />
-            <ImageView fx:id="dorsoImage" fitHeight="68.0" fitWidth="77.0" onMouseClicked="#editarDorso" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="Pareja5Image" fitHeight="69.0" fitWidth="75.0" onMouseClicked="#editarPareja5" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" />
-            <ImageView fx:id="Pareja6Image" fitHeight="69.0" fitWidth="77.0" onMouseClicked="#editarPareja6" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" />
+            <ImageView fx:id="Pareja1Image" fitHeight="63.0" fitWidth="77.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
+            <ImageView fx:id="Pareja2Image" fitHeight="69.0" fitWidth="76.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" />
+            <ImageView fx:id="Pareja3Image" fitHeight="69.0" fitWidth="76.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" />
+            <ImageView fx:id="Pareja4Image" fitHeight="69.0" fitWidth="76.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" />
+            <ImageView fx:id="dorsoImage" fitHeight="68.0" fitWidth="77.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="Pareja5Image" fitHeight="69.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" />
+            <ImageView fx:id="Pareja6Image" fitHeight="69.0" fitWidth="77.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" />
          </children>
       </GridPane>
       <GridPane layoutX="36.0" layoutY="502.0" prefHeight="20.0" prefWidth="564.0">
@@ -211,12 +201,12 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <ImageView fx:id="Pareja7Image" fitHeight="69.0" fitWidth="79.0" onMouseClicked="#editarPareja7" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
-            <ImageView fx:id="Pareja12Image" fitHeight="69.0" fitWidth="80.0" onMouseClicked="#editarPareja12" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" />
-            <ImageView fx:id="Pareja10Image" fitHeight="69.0" fitWidth="81.0" onMouseClicked="#editarPareja10" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" />
-            <ImageView fx:id="Pareja9Image" fitHeight="69.0" fitWidth="80.0" onMouseClicked="#editarPareja9" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" />
-            <ImageView fx:id="Pareja8Image" fitHeight="69.0" fitWidth="78.0" onMouseClicked="#editarPareja8" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" />
-            <ImageView fx:id="Pareja11Image" fitHeight="69.0" fitWidth="80.0" onMouseClicked="#editarPareja11" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" />
+            <ImageView fx:id="Pareja7Image" fitHeight="69.0" fitWidth="79.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
+            <ImageView fx:id="Pareja12Image" fitHeight="69.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" />
+            <ImageView fx:id="Pareja10Image" fitHeight="69.0" fitWidth="81.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" />
+            <ImageView fx:id="Pareja9Image" fitHeight="69.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" />
+            <ImageView fx:id="Pareja8Image" fitHeight="69.0" fitWidth="78.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" />
+            <ImageView fx:id="Pareja11Image" fitHeight="69.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" />
          </children>
       </GridPane>
       <GridPane layoutX="36.0" layoutY="587.0" prefHeight="20.0" prefWidth="564.0">
@@ -279,12 +269,12 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <ImageView fx:id="Pareja13Image" fitHeight="69.0" fitWidth="80.0" onMouseClicked="#editarPareja13" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
-            <ImageView fx:id="Pareja14Image" fitHeight="69.0" fitWidth="79.0" onMouseClicked="#editarPareja14" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" />
-            <ImageView fx:id="Pareja15Image" fitHeight="69.0" fitWidth="80.0" onMouseClicked="#editarPareja15" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" />
-            <ImageView fx:id="Pareja16Image" fitHeight="69.0" fitWidth="82.0" onMouseClicked="#editarPareja16" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" />
-            <ImageView fx:id="Pareja17Image" fitHeight="69.0" fitWidth="81.0" onMouseClicked="#editarPareja17" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" />
-            <ImageView fx:id="Pareja18Image" fitHeight="69.0" fitWidth="80.0" onMouseClicked="#editarPareja18" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" />
+            <ImageView fx:id="Pareja13Image" fitHeight="69.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
+            <ImageView fx:id="Pareja14Image" fitHeight="69.0" fitWidth="79.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" />
+            <ImageView fx:id="Pareja15Image" fitHeight="69.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" />
+            <ImageView fx:id="Pareja16Image" fitHeight="69.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" />
+            <ImageView fx:id="Pareja17Image" fitHeight="69.0" fitWidth="81.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" />
+            <ImageView fx:id="Pareja18Image" fitHeight="69.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" />
          </children>
       </GridPane>
       <Button fx:id="addImageButton" layoutX="436.0" layoutY="219.0" mnemonicParsing="false" onMouseClicked="#anyadirImagen" prefHeight="40.0" prefWidth="149.0" text="Añadir Imagen">
@@ -301,5 +291,10 @@
             </ImageView>
          </children>
       </StackPane>
+      <ImageView fitHeight="31.0" fitWidth="477.0" layoutX="75.0" layoutY="59.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../imagenes/editor_baraja.png" />
+         </image>
+      </ImageView>
    </children>
 </Pane>
